Fix the !ENABLE(SHADOW_DOM) && !ENABLE(DETAILS_ELEMENT) build https://bugs.webkit.org/show_bug.cgi?id=158347

Reviewed by Chris Dumez.

* dom/ContainerNode.cpp:
(WebCore::destroyRenderTreeIfNeeded):


Canonical link: https://commits.webkit.org/176509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201723 268f45cc-cd09-0410-ab3c-d52691b4dbfc