Source/WebCore/dom/ContainerNode.cpp
@@ -99,8 +99,12 @@ void ContainerNode::removeDetachedChildren()
 
 static inline void destroyRenderTreeIfNeeded(Node& child)
 {
+    bool childIsHTMLSlotElement = false;
+#if ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT)
+    childIsHTMLSlotElement = is<HTMLSlotElement>(child);
+#endif
     // FIXME: Get rid of the named flow test.
-    if (!child.renderer() && !child.isNamedFlowContentNode() && !is<HTMLSlotElement>(child))
+    if (!child.renderer() && !child.isNamedFlowContentNode() && !childIsHTMLSlotElement)
         return;
     if (is<Element>(child))
         RenderTreeUpdater::tearDownRenderers(downcast<Element>(child));
